--- a/index.html
+++ b/index.html
@@ -514,10 +514,11 @@
             <h1>PMI Eduverse</h1>
         </div>
         <div class="nav-links">
-            <a href="#latest">Latest Videos</a>
-            <a href="#popular">Popular Videos</a>
+            <a href="https://www.pmieduverse.com/home">Home</a>
+            <a href="https://www.pmieduverse.com/test">Test</a>
+            <a href="https://www.pmieduverse.com/exams">Exams</a>
             <a href="https://www.pmieduverse.com/about">About Us</a>
-            <a href="https://www.pmieduverse.com/contact">Contact</a>
+            <a href="https://www.pmieduverse.com/inquiry">Inquiry</a>
         </div>
     </nav>
 
